--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,5 +1,5 @@
-<h2>スケジュール新規作成</h2>
-	<%= render "shared/error", obj: @task %>
+<h2>スケジュール編集</h2>
+    <%= render "shared/error", obj: @task %>
 <%= form_for @task do |f| %>
     <table>
         <tr>
@@ -9,7 +9,6 @@
         <tr>
             <th><%= f.label :start_time ,"開始日" %></th>
             <td><%= f.date_field :start_time %></td>
-           
         </tr>
         <tr>
             <th><%= f.label :end_time ,"終了日" %></th>
@@ -26,8 +25,8 @@
     </table>
     <div>
         <ul>
-            <li><%= f.submit "スケジュールを新規登録する"%></li>
-            <li><%= link_to "スケジュール一覧に戻る", :tasks %></li>
+            <li><%= f.submit "編集を完了する" %></li>
+            <li><%= link_to "スケジュール情報一覧に戻る", :tasks %></li>
         </ul>
     </div>
 <% end %>
